--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
 .gradle
 build/
-!gradle/wrapper/gradle-wrapper.jar
+gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+/.idea/**
+/build.gradle.kts
+/gradlew.bat
+/settings.gradle.kts
+# Delete unnecessary files (I tried to load your project and it crashed my IntelliJ)
 ### Eclipse ###
 .apt_generated
 .classpath
